# hasser_cookies

c/: cookiecutter.json
c/{{cookiecutter.__project_slug}}/: CMakeLists.txt  CMakePresets.json
c/{{cookiecutter.__project_slug}}/src/: main.c
cpp/: cookiecutter.json
cpp/{{cookiecutter.__project_slug}}/: CMakeLists.txt  CMakePresets.json
cpp/{{cookiecutter.__project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
cpp/{{cookiecutter.__project_slug}}/src/: hello.cpp  main.cpp
python/: cookiecutter.json
python/{{cookiecutter.__project_slug}}/: .devcontainer.json  .gitignore  Dockerfile  pyproject.toml
python/{{cookiecutter.__project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
scala/: cookiecutter.json
scala/{{cookiecutter.__project_slug}}/: .devcontainer.json  Dockerfile  build.sbt  build.sc
scala/{{cookiecutter.__project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
scala/{{cookiecutter.__project_slug}}/src/main/scala/{{cookiecutter.__project_slug}}/: Main.scala
scala/{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/src/: Main.scala
scala/{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/test/src/: MainTests.scala
